--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.0",
     "express": "^4.21.0",
     "form-data": "^4.0.0",
+    "multer": "^2.0.2",
     "nanoid": "^3.3.7",
     "slugify": "^1.6.6"
   },
